tests/machine/x/go/join_multi.go
//go:build ignore

// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:10:45Z
// Source: ../../../tests/vm/valid/join_multi.mochi

package main

import (
	"fmt"
)

func main() {
	customers := []Customer{Customer{
		Id:   1,
		Name: "Alice",
	}, Customer{
		Id:   2,
		Name: "Bob",
	}}
	orders := []Order{Order{
		Id:         100,
		CustomerId: 1,
	}, Order{
		Id:         101,
		CustomerId: 2,
	}}
	items := []Item{Item{
		OrderId: 100,
		Sku:     "a",
	}, Item{
		OrderId: 101,
		Sku:     "b",
	}}
	result := func() []Result {
		results := []Result{}
		for _, o := range orders {
			for _, c := range customers {
				if !(o.CustomerId == c.Id) {
					continue
				}
				for _, i := range items {
					if !(o.Id == i.OrderId) {
						continue
					}
					results = append(results, Result{
						Name: c.Name,
						Sku:  i.Sku,
					})
				}
			}
		}
		return results
	}()
	fmt.Println("--- Multi Join ---")
	for _, r := range result {
		fmt.Println(r.Name, "bought item", r.Sku)
	}
}
